# tower

./: .gitignore  LICENSE  Makefile  cli.py  docker-compose.yml  download_spacy_models.py  learn.py  pyproject.toml  requirements.in  requirements.txt  to_check_tokenizator.txt
app/: app_ctx.py  babble.py  courses.py  settings.py
app/data_layer/: connections.py  models.py
backend/: api_app.py  app_ctx.py  settings.py
backend/admin/: babble.py  common.py  main.py  words.py
backend/babble/: babble.py  lemmas.py  models.py
backend/core/: api_auth.py  crypto.py  models.py
backend/courses/: handlers.py  models.py
backend/dictionary/: models.py  words.py
data/: casa.s01e01.srt  casa.s01e01.txt
es/: base.json  casa.json  casa.s01e01.json
flet_ui/: README.md  client.py  local_data.py  main.py  settings.py  state.py
flet_ui/pages/: const.py  login.py  new_words.py  practice.py  root.py
learn_app/: learn.py  learn.tcss
tests/: conftest.py  test_babble.py  test_models.py
tests/babble/: test_babble.py  test_lemmatize.py
tests/core/: test_api_auth.py
tests/courses/: test_user_stats.py
tower/: babble.py  settings.py
