[tool.poetry]
name = "tower"
version = "0.1.0"
description = "Tower of Babble"
authors = ["Oleksii 'LXj' Aleksieiyev <gotletter@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.28.1"
motor = "^3.3.1"
spacy = "^3.7.1"
pydantic-settings = "^2.0.3"
loguru = "^0.7.2"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.292"
ipython = "^8.16.1"
ipykernel = "^6.25.2"
pytest = "^7.4.2"
testcontainers-mongodb = "^0.0.1rc1"
pytest-mock = "^3.11.1"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
select = ["F", "E", "W", "I"]
