[project]
name = "tower"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "argon2-cffi>=23.1.0",
    "beanie>=1.27.0",
    "beautifulsoup4>=4.12.3",
    "flet>=0.24.1",
    "ipdb>=0.13.13",
    "litestar[jwt,standard]>=2.12.1",
    "loguru>=0.7.2",
    "openai>=1.54.4",
    "pip>=24.3.1",
    "pydantic-settings>=2.6.1",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "python-jose>=3.3.0",
    "ruff>=0.7.4",
    "spacy>=3.8.2",
    "testcontainers>=4.8.2",
    "testcontainers-mongodb>=0.0.1rc1",
    "textual>=0.85.2",
    "textual-dev>=1.6.1",
    "typer>=0.13.0",
]

[tool.ruff]
line-length = 120
lint.select = ["F", "E", "W", "I"]
